--- a/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -1,5 +1,16 @@
 ﻿@{
     Layout = null;
+    var seriesTitle = "The amazing Spider-Man";
+    var issueNumber = 700;
+    var description = "<p>Final Issue</p>";
+    var artists = new string[]
+    {
+        "Script: Dan Slott",
+        "Pencils: Humberto Ramos",
+        "Inks: Victor Olazaba",
+        "Colors: Edgar Delgado",
+        "Letters: Chris Eliopoulos"
+    };
 }
 
 <!DOCTYPE html>
@@ -11,7 +22,27 @@
 </head>
 <body>
     <div>
-    <h1>Hello From Our View</h1>
+    <h1>@seriesTitle</h1>
+    <h2>@issueNumber</h2>
+    <h5>Description:</h5>
+    <div>
+
+        @Html.Raw(description)
+
+    </div>
+    @if (artists.Length > 0)
+    {
+        <h5>Artists:</h5>
+    <div>
+        
+        <ul>
+            @foreach (var artist in artists)
+            {
+                <li>@artist</li>
+            }
+        </ul>
+    </div>
+    }
     </div>
 </body>
 </html>
